Fix typo in changelog
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/378@7139 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -34,7 +34,7 @@ nvidia-graphics-drivers (378.09-1~svn1) UNRELEASED; urgency=medium
     (Closes: #825637)
 
   [ Luca Boccassi ]
-  * Update nv-readme.ids fro 378.09
+  * Update nv-readme.ids for 378.09
   * Refresh nvidia-drm-master-dev.patch for 378.09 to remove fuzz
   * Update symbols files for 378.09
   * Add support and virtual provides for OpenCL 2.0. Although 2.0 symbols have
