add ${Version:post-jessie} substvar
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304-stretch@7141 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -80,6 +80,8 @@ nvidia-graphics-drivers (304.134-0~svn4stretch) UNRELEASED; urgency=medium
     nvidia-driver-libs-i386 metapackage.
   * libnvidia-glcore: New package, split from libgl1-nvidia-glx.
   * libnvidia-cfg1: New package, split from libgl1-nvidia-glx.
+  * Add ${Version:post-jessie} substvar to simplify adjusting Breaks/Replaces
+    for new upstream releases in stable.
   * Overhaul package descriptions.
 
   [ Luca Boccassi ]
