finalize changelog for nvidia-graphics-drivers (375.26-2)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7158 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (375.26-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (375.26-2) unstable; urgency=medium
 
   * Merge changes from 340.101-1 (jessie).
   * nvidia-alternative: Add alternative for 
@@ -9,7 +9,7 @@ nvidia-graphics-drivers (375.26-2) UNRELEASED; urgency=medium
     Breaks/Replaces for new upstream releases in stable.
   * Update lintian overrides.
 
- -- Andreas Beckmann <anbe@debian.org>  Thu, 05 Jan 2017 14:35:53 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 24 Jan 2017 03:53:38 +0100
 
 nvidia-graphics-drivers (375.26-1) unstable; urgency=medium
 
