Add deprecated-cpu-events.patch and vmf-address.patch to fix modules builds on 4.10
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@7168 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,10 @@ nvidia-graphics-drivers (340.102-1~svn4jessie) UNRELEASED; urgency=medium
   * unregister_proc_on_failure.patch: New, try to remove proc entries during
     error unwind while loading the module.  (Closes: #764639)
 
+  [ Luca Boccassi ]
+  * Add deprecated-cpu-events.patch and vmf-address.patch to fix kernel
+    module build on Linux 4.10 and newer.
+
  -- Andreas Beckmann <anbe@debian.org>  Fri, 10 Feb 2017 23:05:58 +0100
 
 nvidia-graphics-drivers (340.101-1) jessie; urgency=medium
