--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
-nvidia-graphics-drivers (304.134-0~svn4wheezy) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (304.135-0~svn4wheezy) UNRELEASED; urgency=medium
 
+  * New upstream legacy 304xx branch release 304.135 (2017-01-14).
+    - Added support for X.Org xserver ABI 23 (xorg-server 1.19)
+    - Fixed a bug that allowed nvidia-installer to attempt loading kernel
+      modules that were built against non-running kernels.
   * New upstream legacy 304xx branch release 304.134 (2016-12-14).
     * Fixed CVE-2016-8826.  (Closes: #848195)
     - Added support for X.Org xserver ABI 23 (xorg-server 1.19)
