--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,9 @@ nvidia-graphics-drivers (375.39-1~svn1) UNRELEASED; urgency=medium
     - Fixed a regression that prevented systems with multiple DisplayPort
       monitors from resuming correctly from suspend.
 
+  [ Luca Boccassi ]
+  * Update nv-readme.ids
+
  -- Luca Boccassi <luca.boccassi@gmail.com>  Tue, 14 Feb 2017 23:50:42 +0000
 
 nvidia-graphics-drivers (375.26-2) unstable; urgency=medium
