Mention CVEs and close #855277 in changelog entry for 375.39
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7174 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 nvidia-graphics-drivers (375.39-1~svn1) UNRELEASED; urgency=medium
 
   * New upstream long lived branch release 375.39 (2017-02-14).
+    - Fixed CVE-2017-0309, CVE-2017-0310, CVE-2017-0311, CVE-2017-0321,
+      CVE-2017-0318. (Closes: #855277)
     - Added support for the following GPU(s): Quadro GP100, Quadro P4000,
       Quadro P2000, Quadro P1000, Quadro P600, Quadro P400, Quadro M1200,
       Quadro M2200
