--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,8 @@
 nvidia-graphics-drivers (304.135-0~svn4wheezy) UNRELEASED; urgency=medium
 
-  * New upstream legacy 304xx branch release 304.135 (2017-01-14).
-    - Added support for X.Org xserver ABI 23 (xorg-server 1.19)
-    - Fixed a bug that allowed nvidia-installer to attempt loading kernel
-      modules that were built against non-running kernels.
+  * New upstream legacy 304xx branch release 304.135 (2017-02-14).
+    * Fixed CVE-2017-0309, CVE-2017-0310, CVE-2017-0311, CVE-2017-0318,
+      CVE-2017-0321.  (Closes: #855277)
   * New upstream legacy 304xx branch release 304.134 (2016-12-14).
     * Fixed CVE-2016-8826.  (Closes: #848195)
     - Added support for X.Org xserver ABI 23 (xorg-server 1.19)
