--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ nvidia-graphics-drivers (375.39-1~svn1) UNRELEASED; urgency=medium
   * Update symbols files
   * Add deprecated-cpu-events.patch, dma-fence-rename.patch and
     vmf-address.patch to fix kernel module build on Linux 4.10 and newer.
+    (Closes: #855802)
 
   [ Andreas Beckmann ]
   * bug-control: Report information about installed Vulkan ICDs.
