--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (375.39-1~svn1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (375.39-1) unstable; urgency=medium
 
   * New upstream long lived branch release 375.39 (2017-02-14).
     * Fixed CVE-2017-0309, CVE-2017-0310, CVE-2017-0311, CVE-2017-0318,
@@ -24,7 +24,7 @@ nvidia-graphics-drivers (375.39-1~svn1) UNRELEASED; urgency=medium
   * bug-control: Report information about installed Vulkan ICDs.
   * Restrict watch file to releases from the 375.xx long lived branch.
 
- -- Luca Boccassi <luca.boccassi@gmail.com>  Tue, 14 Feb 2017 23:50:42 +0000
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 23 Feb 2017 16:36:38 +0100
 
 nvidia-graphics-drivers (375.26-2) unstable; urgency=medium
 
