finalize changelog for nvidia-graphics-drivers (340.102-1), upload to jessie
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@7218 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (340.102-1~svn4jessie) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (340.102-1) jessie; urgency=medium
 
   * New upstream legacy 340xx branch release 340.102 (2017-02-14).
     * Fixed CVE-2017-0309, CVE-2017-0310, CVE-2017-0311, CVE-2017-0318,
@@ -7,12 +7,13 @@ nvidia-graphics-drivers (340.102-1~svn4jessie) UNRELEASED; urgency=medium
   [ Andreas Beckmann ]
   * unregister_proc_on_failure.patch: New, unregister procfs entries during
     error unwind if loading the module failed.  (Closes: #764639)
+  * Upload to jessie.
 
   [ Luca Boccassi ]
   * Add deprecated-cpu-events.patch and vmf-address.patch to fix kernel
     module build on Linux 4.10 and newer.
 
- -- Andreas Beckmann <anbe@debian.org>  Fri, 10 Feb 2017 23:05:58 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 04 Apr 2017 22:12:27 +0200
 
 nvidia-graphics-drivers (340.101-1) jessie; urgency=medium
 
