update nv-readme.ids for 375.66
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7245 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -40,7 +40,12 @@ nvidia-graphics-drivers (375.66-1~svn1) UNRELEASED; urgency=medium
       particularly common on Linux 4.10.
     - Fixed a bug that caused PRIME Sync to run slowly on systems with Pascal
       GPUs.
+
+  [ Andreas Beckmann ]
   * Merge changes from 340.102-1 (jessie).
+
+  [ Luca Boccassi ]
+  * Update nv-readme.ids
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 12 Apr 2017 13:47:15 +0200
 
