--- a/debian/changelog
+++ b/debian/changelog
@@ -46,6 +46,7 @@ nvidia-graphics-drivers (375.66-1~svn1) UNRELEASED; urgency=medium
 
   [ Luca Boccassi ]
   * Update nv-readme.ids
+  * Update symbols files
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 12 Apr 2017 13:47:15 +0200
 
