--- a/debian/changelog
+++ b/debian/changelog
@@ -2,45 +2,41 @@ nvidia-graphics-drivers (375.66-1) unstable; urgency=medium
 
   * New upstream long lived branch release 375.66 (2017-05-04).
     * Fixed CVE-2017-0350, CVE-2017-0351, CVE-2017-0352.  (Closes: #863515)
-    - Added support for the following GPUs: GeForce GTX 1080 Ti, Quadro P3000,
-      Quadro M520, TITAN Xp
-    - Fixed a bug that could cause EGL applications to crash when calling
-      eglInitialize() multiple times on X11-backed displays.
-    - Fixed a regression that could cause rendering corruption on a monitor
-      connected via DisplayPort upon a modeset event (for example, changing
-      resolutions or power cycling the monitor).
-    - Updated the display configuration page in the nvidia-settings control
-      panel to accurately reflect HDMI 3D refresh rates.
-    - Fixed a bug that could cause OpenGL applications to crash when VT
-      switching between multiple X servers.
-    - Fixed a bug that caused the system to become unresponsive after resuming
-      from power management suspend/hibernate. Additional symptoms of this bug
-      included display flickering and "Xid 56" errors in the kernel log.
-    - Fixed a bug that caused backlight brightness to not be controllable on
-      some notebooks with DisplayPort internal panels.
-    - Fixed a bug that left HDMI and DisplayPort audio muted after a
-      framebuffer console mode was restored. For some displays, this caused the
-      display to remain blank.
+    - Fixed a bug that could cause EGL applications to crash when
+      calling eglInitialize() multiple times on X11-backed displays.
+    - Fixed a regression that could cause rendering corruption on a
+      monitor connected via DisplayPort upon a modeset event (for
+      example, changing resolutions or power cycling the monitor).
+    - Fixed a bug that could cause OpenGL applications to crash when
+      VT switching between multiple X servers.
+    - Fixed a bug that caused the system to become unresponsive after
+      resuming from power management suspend/hibernate.  Additional
+      symptoms of this bug included display flickering and "Xid 56"
+      errors in the kernel log.
+    - Fixed a bug that caused backlight brightness to not be controllable
+      on some notebooks with DisplayPort internal panels.
+    - Added support for the following GPUs: GeForce GTX 1080 Ti, Quadro M520,
+      TITAN Xp, Quadro P3000.
+    - Fixed a bug that left HDMI and DisplayPort audio muted after a framebuffer
+      console mode was restored. For some displays, this caused the display to
+      remain blank.
     - Fixed a bug that caused audio over DisplayPort to stop working when the
-      monitor was unplugged and plugged back in or awoken from DPMS
-      power-saving mode.
-    - Restored support for the following GPU: GRID K520
-    - Fixed a regression that caused corruption in certain applications, such
-      as window border shadows in Unity, after resuming from suspend.
-    - Installation of the nvidia-drm kernel module is now optional. The new
-      '--no-drm' option can be used to prevent nvidia-installer from building
-      and installing nvidia-drm, on systems where this kernel module fails to
-      build and/or load.
-    - Fixed a bug that could cause some applications to crash when running with
-      PRIME Sync.
-    - Fixed a bug that prevented PRIME Sync from working on notebooks with
-      GeForce GTX 4xx and 5xx series GPUs.
+      monitor was unplugged and plugged back in or awoken from DPMS power-saving
+      mode.
+    - Restored support for the following GPU: GRID K520.
+    - Fixed a regression that caused corruption in certain applications, such as
+      window border shadows in Unity, after resuming from suspend.
+    - Fixed a bug that could cause some applications to crash when
+      running with PRIME Sync.
+    - Fixed a bug that prevented PRIME Sync from working on notebooks
+      with GeForce GTX 4xx and 5xx series GPUs.
     - Fixed a bug that caused OpenGL apps to have excessive CPU usage when
       running with PRIME Sync but without native displays enabled.
     - Fixed a bug that could cause PRIME Sync to deadlock in the kernel,
       particularly common on Linux 4.10.
     - Fixed a bug that caused PRIME Sync to run slowly on systems with Pascal
       GPUs.
+    * Improved compatibility with recent Linux kernels.
 
   [ Andreas Beckmann ]
   * Merge changes from 340.102-1 (jessie).
@@ -906,7 +902,6 @@ nvidia-graphics-drivers (352.79-5) unstable; urgency=medium
   * Drop incomplete Perfkit support.
   * nvidia-detect: Drop support for squeeze(-lts) (EoL).
   * Update lintian overrides.
-  * Upload to jessie.
 
   [ Luca Boccassi ]
   * Update Portuguese debconf translation. Thanks Américo Monteiro!
