--- a/debian/changelog
+++ b/debian/changelog
@@ -1,52 +1,34 @@
 nvidia-graphics-drivers (378.13-1~svn1) UNRELEASED; urgency=medium
 
   * New upstream short lived branch release 378.13 (2017-02-14).
-    - Added support for the following GPU(s): Quadro P3000, Quadro GP100,
-      Quadro P4000, Quadro P2000, Quadro P1000, Quadro P600, Quadro P400
     - Disabled OpenGL threaded optimizations by default under Xinerama.
-    - Fixed a bug that prevented PRIME Sync from working on notebooks with
-      GeForce GTX 4xx and 5xx series GPUs.
-    - Fixed a bug that caused system hangs when resuming from suspend with some
-      GPUs.
-    - Fixed a regression that could cause corruption when hot-plugging displays.
-    - Fixed a regression that prevented systems with multiple DisplayPort
-      monitors from resuming correctly from suspend.
-    - Added support for the screen_info.ext_lfb_base field, on kernels that have
-      it, in order to properly handle UEFI framebuffer consoles with physical
-      addresses above 4GB.
-    - Added support for X.Org xserver ABI 23 (xorg-server 1.19)
-    - Fixed a bug that allowed nvidia-installer to attempt loading kernel
-      modules that were built against non-running kernels.
   * New upstream beta 378.09 (2017-01-18).
-    - Added support for the following GPUs: Quadro M1200, Quadro M2200.
     - Added support for the ARB_parallel_shader_compile extension to allow
       multi-threaded compilation of GLSL shaders.
-    - Updated the X driver to ignore any Virtual Reality Head Mounted Displays
-      (HMDs).  See the "AllowHMD" X configuration option in the README for
-      details.
-    - The driver will now advertise GLX FBConfigs with no depth bits on depth
-      30 X screens.
+    - Updated the X driver to ignore any Virtual Reality Head Mounted
+      Displays (HMDs).  See the "AllowHMD" X configuration option in the
+      README for details.
+    - The driver will now advertise GLX FBConfigs with no depth bits on depth 30
+      X screens.
     - Added support in nvidia-settings to view configured PRIME displays. To
       enable PRIME displays, see "Offloading Graphics Display with RandR 1.4"
       in the README.
-    - Added infrastructure which enables the NVIDIA EGL driver to load EGL
-      external platform libraries that add client-side support for new window
-      systems, beyond the existing libnvidia-egl-wayland.so.1. For more
-      details, see:
-        https://github.com/NVIDIA/eglexternalplatform
-        https://github.com/NVIDIA/egl-wayland
+    - Added infrastructure which enables the NVIDIA EGL driver to load EGL external
+      platform libraries that add client-side support for new window systems, beyond
+      the existing libnvidia-egl-wayland.so.1. For more details, see:
+        - https://github.com/NVIDIA/eglexternalplatform
+        - https://github.com/NVIDIA/egl-wayland
     - Added support for the following Vulkan extensions: VK_KHR_display,
-      VK_KHR_display_swapchain
+      VK_KHR_display_swapchain.
     - Enabled OpenGL threaded optimizations by default in the driver. Refer to
-      the "Threaded Optimizations" section in the "Specifying OpenGL
-      Environment Variable Settings" chapter of the README for details. These
-      optimizations will self-disable when they are degrading performance. As a
-      result, performance should be unchanged for many applications, and
-      increased for those that benefit from threaded optimizations and were not
-      already forcing them enabled.
+      the "Threaded Optimizations" section in the "Specifying OpenGL Environment
+      Variable Settings" chapter of the README for details.  These optimizations
+      will self-disable when they are degrading performance.  As a result,
+      performance should be unchanged for many applications, and increased for
+      those that benefit from threaded optimizations and were not already
+      forcing them enabled.
 
   [ Luca Boccassi ]
-  * Update nv-readme.ids
   * Refresh nvidia-drm-master-dev.patch for 378.09 to remove fuzz
   * Update symbols files
   * Rename libnvidia-egl-wayland -> libnvidia-egl-wayland1 to follow SONAME
