--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (375.66-2) UNRELEASED; urgency=medium
+
+  * nvidia-vulkan-common: Add Conflicts: libgl1-nvidia-glx as a workaround for
+    #864477 (wrong library referenced in nvidia_icd.json in non-GLVND setups).
+
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 13 Jun 2017 11:35:36 +0200
+
 nvidia-graphics-drivers (375.66-1) unstable; urgency=medium
 
   * New upstream long lived branch release 375.66 (2017-05-04).
