--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ nvidia-graphics-drivers (375.66-2) UNRELEASED; urgency=medium
 
   * nvidia-vulkan-common: Add Conflicts: libgl1-nvidia-glx as a workaround for
     #864477 (wrong library referenced in nvidia_icd.json in non-GLVND setups).
+  * nvidia-legacy-check.preinst: Verbose debug output can be enabled by
+    setting DEBUG_NVIDIA_LEGACY_CHECK=yes in the environment.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 13 Jun 2017 11:35:36 +0200
 
