--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ nvidia-graphics-drivers (375.66-2) UNRELEASED; urgency=medium
     #864477 (wrong library referenced in nvidia_icd.json in non-GLVND setups).
   * nvidia-legacy-check.preinst: Verbose debug output can be enabled by
     setting DEBUG_NVIDIA_LEGACY_CHECK=yes in the environment.
+  * nvidia-legacy-check: Bump Pre-Depends: nvidia-installer-cleanup to
+    (>= 20151021) for smoother upgrades from jessie.  (See: #864775)
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 13 Jun 2017 11:35:36 +0200
 
