use increasing svn versions
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@7279 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (304.135-1~svn4wheezy) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (304.135-1~svn4deb7wheezy) UNRELEASED; urgency=medium
 
   [ Andreas Beckmann ]
   * Drop substitution backward-compatibility with EoL
