--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,9 @@ nvidia-graphics-drivers (381.22-1~svn1) UNRELEASED; urgency=medium
       bicubic resampling methods when scaling screen transformations
       are in use.  See the README for more details.
 
+  [ Andreas Beckmann ]
+  * Bump libvulkan1 dependency to (>= 1.0.42).
+
  -- Andreas Beckmann <anbe@debian.org>  Thu, 05 Jan 2017 14:35:53 +0100
 
 nvidia-graphics-drivers (378.13-1) experimental; urgency=medium
