--- a/debian/changelog
+++ b/debian/changelog
@@ -40,6 +40,7 @@ nvidia-graphics-drivers (381.22-1~svn1) UNRELEASED; urgency=medium
 
   [ Andreas Beckmann ]
   * Bump libvulkan1 dependency to (>= 1.0.42).
+  * Update lintian overrides.
 
  -- Andreas Beckmann <anbe@debian.org>  Thu, 05 Jan 2017 14:35:53 +0100
 
