--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (375.66-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (375.66-2) unstable; urgency=medium
 
   [ Andreas Beckmann ]
   * nvidia-vulkan-common: Add Conflicts: libgl1-nvidia-glx as a workaround for
@@ -12,7 +12,7 @@ nvidia-graphics-drivers (375.66-2) UNRELEASED; urgency=medium
   [ Luca Boccassi ]
   * nvidia-driver.README.Debian: Add notes about GLVND vs non-GLVND flavours.
 
- -- Andreas Beckmann <anbe@debian.org>  Tue, 13 Jun 2017 11:35:36 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 15 Jun 2017 02:01:53 +0200
 
 nvidia-graphics-drivers (375.66-1) unstable; urgency=medium
 
