--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (378.13-2) UNRELEASED; urgency=medium
+
+  * nvidia-kernel-dkms: Honor parallel setting from dkms.  (Closes: #864639)
+
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 15 Jun 2017 14:13:00 +0200
+
 nvidia-graphics-drivers (378.13-1) experimental; urgency=medium
 
   * New upstream short lived branch release 378.13 (2017-02-14).
