ccache is fixed since squeeze
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304-stretch@7303 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ nvidia-graphics-drivers (304.135-1~svn4deb9stretch) UNRELEASED; urgency=medium
     Breaks/Replaces for new upstream releases in stable.
   * Overhaul package descriptions.
   * Switch to debhelper compat level 10.
+  * Do not prevent ccache usage. The bug was fixed in ccache 3.0 (in squeeze).
 
  -- Andreas Beckmann <anbe@debian.org>  Thu, 15 Dec 2016 02:42:52 +0100
 
