Add support for buster/sid in nvidia-detect for #866126
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7307 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (375.66-3) UNRELEASED; urgency=medium
+
+  * Add support for buster/sid in nvidia-detect. (Closes: #866126)
+
+ -- Luca Boccassi <luca.boccassi@gmail.com>  Tue, 27 Jun 2017 22:28:32 +0100
+
 nvidia-graphics-drivers (375.66-2) unstable; urgency=medium
 
   [ Andreas Beckmann ]
