--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,7 @@ nvidia-graphics-drivers (384.47-1~svn1) UNRELEASED; urgency=medium
       and precompiled kernel interfaces from nvidia-installer. This
       functionality was limited to unencrypted ftp and http, and was
       implemented using code that is no longer actively maintained.
+  * Refresh man-fixes-nvidia-smi.patch for 384.47.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Thu, 29 Jun 2017 18:50:02 +0100
 
