--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,7 @@ nvidia-graphics-drivers (384.47-1~svn1) UNRELEASED; urgency=medium
       functionality was limited to unencrypted ftp and http, and was
       implemented using code that is no longer actively maintained.
   * Refresh man-fixes-nvidia-smi.patch for 384.47.
+  * Update nv-readme.ids.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Thu, 29 Jun 2017 18:50:02 +0100
 
