--- a/debian/changelog
+++ b/debian/changelog
@@ -39,6 +39,7 @@ nvidia-graphics-drivers (384.47-1~svn1) UNRELEASED; urgency=medium
       implemented using code that is no longer actively maintained.
   * Refresh man-fixes-nvidia-smi.patch for 384.47.
   * Update nv-readme.ids.
+  * Update symbols files.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Thu, 29 Jun 2017 18:50:02 +0100
 
