--- a/debian/changelog
+++ b/debian/changelog
@@ -40,6 +40,7 @@ nvidia-graphics-drivers (384.47-1~svn1) UNRELEASED; urgency=medium
   * Refresh man-fixes-nvidia-smi.patch for 384.47.
   * Update nv-readme.ids.
   * Update symbols files.
+  * Add nvidia-vulkan-nonglvnd-common to ship the non-GLVND Vulkan ICD file.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Thu, 29 Jun 2017 18:50:02 +0100
 
