switch watch URL from ftp:// to https://
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7334 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ nvidia-graphics-drivers (375.66-3) UNRELEASED; urgency=medium
   [ Andreas Beckmann ]
   * nvidia-kernel-dkms: Honor parallel setting from dkms.  (Closes: #864639)
   * Do not prevent ccache usage. The bug was fixed in ccache 3.0 (in squeeze).
+  * Switch watch URL from ftp:// to https://.  (Closes: #868815)
 
   [ Luca Boccassi ]
   * Add support for buster/sid in nvidia-detect.  (Closes: #866126)
